Se incluye Contenido de PRENSA

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         	<ul id="menu-nav">
             	<li class="current"><a href="#home-slider">Inicio</a></li>
                 <li><a href="#work">Portafolio</a></li>
+                <li><a href="#prensa">Prensa</a></li>
                 <li><a href="#about">Nosotros</a></li>
                 <li><a href="#contact">Contáctenos</a></li>
             </ul>
@@ -595,6 +596,36 @@
     </div>
 </div>
 <!-- End Our Work Section -->
+
+<!-- Prensa Section -->
+<div id="prensa" class="page-alternate">
+<div class="container">
+    <!-- Title Page -->
+    <div class="row">
+        <div class="span12">
+            <div class="title-page">
+                <h2 class="title">Prensa Peruana</h2>
+                <h3 class="title-description">Información acerca de la actualidad de la prensa escrita nacional y sus tendencias.</h3>
+            </div>
+        </div>
+    </div>
+    <!-- End Title Page -->
+    
+    <!-- Images Prensa -->
+    <div class="row">
+         <div class="offset1 span10">
+            <div class="about-us">
+                <img src="_include/img/prensa/1.jpg">
+                <img src="_include/img/prensa/2.jpg">
+                <img src="_include/img/prensa/3.jpg">
+                <img src="_include/img/prensa/4.jpg">
+            </div>
+        </div>
+    </div>
+
+</div>
+</div>
+
 
 <!-- About Section -->
 <div id="about" class="page-alternate">
