--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 <!-- End of Splash Screen -->
 
 <!-- Homepage Slider -->
-<div id="home-slider">	
+<div id="home-slider">
     <div class="overlay"></div> 
 
     <div class="slider-text">
@@ -613,8 +613,8 @@
     
     <!-- Images Prensa -->
     <div class="row">
-         <div class="offset1 span10">
-            <div class="about-us">
+         <div class="span12">
+            <div class="about-us1">
                 <img src="_include/img/prensa/1.jpg">
                 <img src="_include/img/prensa/2.jpg">
                 <img src="_include/img/prensa/3.jpg">
@@ -647,7 +647,7 @@
         <!-- Start Profile -->
     	<div class="span4 profile">
             <div class="image-wrap">
-                <div class="about-us">
+                <div class="about-us1">
                     <img src="_include/img/about-us/nosotros/1.jpg">
                     <img src="_include/img/about-us/nosotros/2.jpg">
                     <img src="_include/img/about-us/nosotros/3.jpg">
@@ -671,7 +671,7 @@
         <!-- Start Profile -->
     	<div class="span4 profile">
         	<div class="image-wrap">
-                 <div class="about-us">
+                 <div class="about-us2">
                     <img src="_include/img/about-us/servicios/1.jpg">
                     <img src="_include/img/about-us/servicios/2.jpg">
                     <img src="_include/img/about-us/servicios/3.jpg">
@@ -696,7 +696,7 @@
         <!-- Start Profile -->
     	<div class="span4 profile">
         	<div class="image-wrap">
-                <div class="about-us">
+                <div class="about-us3">
                     <img src="_include/img/about-us/dinamica/1.jpg">
                     <img src="_include/img/about-us/dinamica/2.jpg">
                     <img src="_include/img/about-us/dinamica/3.jpg">
